fix: implement view reviews

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @theme {
   --color-primary: #323232;
   --color-primary-light: #b3b3b3;
+  --color-thrid: #b3b3b3;
   --color-secondary: #ffffff;
   --color-error: #ff2727;
 }
